# anotherchessengine

./: .gitignore  README.md  meson.build
generators/genBitboard/: magic.cpp  main.cpp  stringifyU64.hpp
generators/genZobrist/: main.cpp
lib/chess/: ascii.hpp  fen.hpp  game.hpp  gamestate.hpp  move.hpp  movegenerator.hpp  unmove.hpp  util.hpp
lib/chess/engine/: engine.hpp  evaluation.hpp  negamax.hpp  perft.hpp  staticevaluation.hpp  transpositiontable.hpp
lib/lookuptables/: bitboards.hpp  zobristhashes.hpp
projects/demo/: main.cpp
projects/negamax/: main.cpp
projects/perft/: main.cpp
